# poetry-dev-packges

./: README.md  pyproject.toml
src/newmi1988-dev-deps/: main.py
src/newmi1988_dev_deps/: main.py
