[tool.poetry]
name = "newmi1988_dev_deps"
version = "0.1.3"
description = "A package to bundle all dev deps for poetry projects"
authors = ["Tobias Newmiwaka <newmi1988@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autopep8 = "^1.5.5"
pynvim = "^0.4.3"
nox = "^2020.12.31"
rope = "^0.18.0"
isort = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
